jsonschemadsl2ecore.trafo.opt/test/test02/invalidtests/example8.test2
{
	"name":"John",
	
	"job":{
		"role":"enngineer",
		"level":6
	},
	"add":true
	
}